# CS516

lec01/: Makefile  (+4 more)
lec02/_build/default/: project.dune-package  project.install  project.opam
lec02/_build/default/.ppx/423b3c0918a91461d11b9cd1259aca91/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
lec02/_build/default/.utop/: utop.ml-gen
lec02/_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
lec02/_build/default/code/: code.cma  code.cmxa  code.cmxs  code.ml-gen  simple.pp.ml  translate.pp.ml
lec02/_build/default/code/.code.inline-tests/.code.inline-tests.eobjs/byte/: dune__exe__Inline_test_runner_code.cmi  dune__exe__Inline_test_runner_code.cmo  dune__exe__Inline_test_runner_code.cmt
lec02/_build/default/code/.code.objs/: code__Translate.impl.all-deps  simple.pp.ml.d  translate.pp.ml.d
lec02/_build/default/code/.code.objs/byte/: code.cmi  code.cmo  code.cmt  code__Simple.cmi  code__Simple.cmo  code__Simple.cmt  code__Translate.cmi  code__Translate.cmo  code__Translate.cmt
lec02/_build/default/code/.code.objs/native/: code.cmx  code__Simple.cmx  code__Translate.cmx
lec02/_build/default/code/.merlin-conf/: lib-code
lec02/_build/default/code/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  (+1 more)
lec02/_build/default/main/.main.eobjs/byte/: dune__exe__Main.cmi  dune__exe__Main.cmo  dune__exe__Main.cmt
lec02/_build/default/main/.main.eobjs/native/: dune__exe__Main.cmx
lec02/_build/default/main/.merlin-conf/: exe-main
lec02/_build/default/skeleton/: translateSkeleton.ml
lec06/code/: dune  ir1.ml  ir1lirio.ml  main1.ml  main2.ml
(+157 files in other folders)
