opam-version: "2.0"
version: "1.0"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [ make ]
depends: [ ]

description: "CIS341 lec02 Lecture Code"

tags: [
  "category:Computer Science/Education/Programming Languages and Compilers"
  "keyword:data structures"
  "keyword:algorithms"
]
